--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/pro": "2.0.4",
     "core-js": "^2.5.4",
+    "ionic": "^5.2.3",
     "mapbox-gl": "^1.1.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
