--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.11.0",
+    "@ionic-native/file-chooser": "^5.11.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/pro": "2.0.4",
+    "cordova-plugin-filechooser": "^1.2.0",
     "core-js": "^2.5.4",
     "ionic": "^5.2.3",
     "mapbox-gl": "^1.1.1",
@@ -59,5 +62,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-filechooser": {}
+    }
+  }
 }
